--- a/-5MuxOfMux/m4x2Mux/m4x2Mux/m4x2Mux/m4x2Mux.runs/impl_1/.vivado.begin.rst
+++ b/-5MuxOfMux/m4x2Mux/m4x2Mux/m4x2Mux/m4x2Mux.runs/impl_1/.vivado.begin.rst
@@ -1,10 +1,5 @@
 <?xml version="1.0"?>
 <ProcessHandle Version="1" Minor="0">
-    <Process Command="vivado.bat" Owner="SET253-INS1U" Host="SET253-INS1C" Pid="456">
-    </Process>
-</ProcessHandle>
-<?xml version="1.0"?>
-<ProcessHandle Version="1" Minor="0">
-    <Process Command="vivado.bat" Owner="SET253-INS1U" Host="SET253-INS1C" Pid="9532">
+    <Process Command="vivado.bat" Owner="Scott Foerster" Host="LABSET332" Pid="9524">
     </Process>
 </ProcessHandle>
