--- a/-5MuxOfMux/mux7_7/mux7_7.runs/synth_1/.vivado.begin.rst
+++ b/-5MuxOfMux/mux7_7/mux7_7.runs/synth_1/.vivado.begin.rst
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
 <ProcessHandle Version="1" Minor="0">
-    <Process Command=".planAhead." Owner="SET253-INS1U" Host="SET253-INS1C" Pid="8592">
+    <Process Command="vivado.bat" Owner="Scott Foerster" Host="LABSET332" Pid="10776">
     </Process>
 </ProcessHandle>
