--- a/-5MuxOfMux/m2x1Mux/m2x1Mux.runs/synth_1/.vivado.begin.rst
+++ b/-5MuxOfMux/m2x1Mux/m2x1Mux.runs/synth_1/.vivado.begin.rst
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
 <ProcessHandle Version="1" Minor="0">
-    <Process Command="vivado.bat" Owner="SET253-INS1U" Host="SET253-INS1C" Pid="9160">
+    <Process Command="vivado.bat" Owner="Scott Foerster" Host="LABSET332" Pid="7184">
     </Process>
 </ProcessHandle>
