--- a/12ControlPathDoesDonts/7_PUFbeauty/puff.runs/synth_1/.vivado.begin.rst
+++ b/12ControlPathDoesDonts/7_PUFbeauty/puff.runs/synth_1/.vivado.begin.rst
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
 <ProcessHandle Version="1" Minor="0">
-    <Process Command="vivado.bat" Owner="FoersterGame" Host="DESKTOP-KB2R4MG" Pid="7888">
+    <Process Command="vivado.bat" Owner="SET253-11U" Host="SET253-11C" Pid="2660">
     </Process>
 </ProcessHandle>
